force-app/main/default/objects/Contact/fields/Portal_Verification_Override__c.field-meta.xml
<CustomField>
    <fullName>Portal_Verification_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Checkbox is selected MANUALLY via Excelsior Users. When this checkbox is set to &apos;true&apos; it bypasses the user email/sms process and uses the code from Portal_Verification_Code</description>
    <inlineHelpText>Please check this box when you want to manually bypass the Application Portal MFA for students. You will be asked to enter a 5 digit code in the field below.</inlineHelpText>
    <label>Portal Verification Override</label>
    <type>Checkbox</type>
</CustomField>