force-app/main/default/objects/Contact/fields/SUMO_CEP_URL_Admissions__c.field-meta.xml
<CustomField>
    <fullName>SUMO_CEP_URL_Admissions__c</fullName>
    <description>A custom SUMO Admissions Scheduling Link for appointments connecting a specific Admissions Counselor with a specific contact.</description>
    <formula>/*The SUMO Admissions Scheduling Link for appointments connecting a specific Admissions Counselor with a specific contact.*/

IF(
NOT(ISBLANK(OwnerId)),
&quot;https://excelsior.my.site.com/s/onlinescheduler?processId=a9n4O000000g0zaQAA&quot; &amp;
&quot;&amp;whoId=&quot; &amp; OwnerId &amp;
&quot;&amp;clientId=&quot; &amp; Id,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use this custom link to schedule a SUMO Admissions appointment between the contact owner and the contact.</inlineHelpText>
    <label>SUMO CEP URL Admissions</label>
    <type>Text</type>
</CustomField>