force-app/main/default/objects/Contact/fields/SUMO_CEP_URL_Financial_Aid__c.field-meta.xml
<CustomField>
    <fullName>SUMO_CEP_URL_Financial_Aid__c</fullName>
    <description>SUMO custom Financial Aid Online Scheduler link for Financial Aid linking contact to round robin FA counselors based upon availability.</description>
    <formula>/*The SUMO Scheduling Link for appointments connected the Financial Aid Online Scheduler.*/

IF(
NOT(ISBLANK(OwnerId)),
&quot;https://excelsior.my.site.com/s/onlinescheduler?processId=a9nUS0000001U5hYAE&quot; &amp;
&quot;&amp;clientId=&quot; &amp; Id,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SUMO Scheduler link to invite this specific contact to schedule a meeting with the Financial Aid Team.</inlineHelpText>
    <label>SUMO CEP URL Financial Aid</label>
    <type>Text</type>
</CustomField>