force-app/main/default/objects/Contact/fields/Test_FirstDeloyment__c.field-meta.xml
<CustomField>
    <fullName>Test_FirstDeloyment__c</fullName>
    <defaultValue>&apos;1&apos;</defaultValue>
    <description>Hello World</description>
    <externalId>true</externalId>
    <inlineHelpText>Hello World</inlineHelpText>
    <label>Test_FirstDeloyment</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>